--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,3 +6,12 @@
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+
+
+@import 'general';
+
+@import 'header';
+
+@import 'sectionHome';
+
+@import 'login';
