--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10905,17 +10905,17 @@ header {
   height: 50px;
 }
 
-nav {
+nav#prova {
   position: fixed;
   width: 100%;
   z-index: 10;
 }
 
-nav.black ul {
+nav#prova.black ul {
   background: #000;
 }
 
-nav ul {
+nav#prova ul {
   list-style: none;
   background: rgba(0, 0, 0, 0);
   overflow: hidden;
@@ -10926,18 +10926,18 @@ nav ul {
   transition: 1s;
 }
 
-nav ul li {
+nav#prova ul li {
   display: inline-block;
   padding: 20px;
 }
 
-nav ul li a {
+nav#prova ul li a {
   text-decoration: none;
   color: #fff;
   font-size: 14px;
 }
 
-nav ul li a:hover {
+nav#prova ul li a:hover {
   text-decoration: none;
   color: rgba(255, 255, 255, 0.9);
   transition: all 0.2s;
@@ -11026,10 +11026,6 @@ nav ul li a:hover {
   border-radius: 5px;
   background: #fff;
   transform: rotate(45deg) translate(26px, -2px);
-}
-
-.container {
-  margin-top: 100px;
 }
 
 .img-box {
@@ -11239,7 +11235,9 @@ nav ul li a:hover {
 }
 
 .sector {
-  padding: 20px;
+  padding: 15px;
+  text-align: center;
+  max-width: 500px;
 }
 
 .section {
@@ -11306,7 +11304,7 @@ nav ul li a:hover {
 }
 
 body {
-  background: #e1f5fe;
+  background: white;
 }
 
 .modal-login {
