--- a/resources/sass/_login.scss
+++ b/resources/sass/_login.scss
@@ -1,6 +1,6 @@
 
 body {
-    background: #e1f5fe;
+    background: white;
 }
 
 .modal-login {
@@ -29,7 +29,7 @@ body {
 
     .form-control,  .btn {
         min-height: 40px;
-        border-radius: 30px; 
+        border-radius: 30px;
         font-size: 15px;
         transition: all 0.5s;
     }
@@ -103,7 +103,7 @@ body {
 
 // .modal-login .form-control, .modal-login .btn {
 //     min-height: 40px;
-//     border-radius: 30px; 
+//     border-radius: 30px;
 //     font-size: 15px;
 //     transition: all 0.5s;
 // }
