--- a/resources/sass/_header.scss
+++ b/resources/sass/_header.scss
@@ -7,13 +7,13 @@ header {
     position: fixed;
     float: left;
     margin: 10px 36px;
-    
+
     img {
         height: 50px;
     }
 }
 
-nav {
+nav#prova {
     position: fixed;
     width: 100%;
     z-index: 10;
@@ -70,7 +70,7 @@ nav {
     position: relative;
     left: 50px;
     top: -5px;
-    
+
 }
 
 .search-box input {
@@ -146,9 +146,7 @@ nav {
         }
 }
 
-.container {
-    margin-top: 100px;
-}
+
 
 .img-box {
     margin-top: 150px;
@@ -160,7 +158,7 @@ nav {
     top: 400px;
     width: 160%;
     right: 290px;
-    
+
 }
 .pic-two {
     width: 50px;
@@ -180,7 +178,7 @@ nav {
     position: absolute;
     left: 150px;
     bottom: 300px;
-    
+
 }
 
 .slide-one{
@@ -316,16 +314,16 @@ nav {
         .img-one{
             width: 45%;
             top: 100px;
-           
+
         }
 
         .pic-one {
             position: relative;
             top: 330px;
             width: 95%;
-           
+
         }
-    
+
 }
 
 
@@ -370,5 +368,5 @@ nav {
   .carousel-inner {
     text-align: center;
   }
-  
+
 }
