--- a/resources/sass/_sectionHome.scss
+++ b/resources/sass/_sectionHome.scss
@@ -2,7 +2,9 @@
 
 .sector {
 
-   padding: 20px;
+   padding: 15px;
+   text-align: center;
+   max-width: 500px;
 }
 
 .section {
@@ -13,11 +15,11 @@
     // min-height: 100vh;
     padding: 50px;
   }
- 
+
   .grid {
     display: flex;
     flex-wrap: wrap;
-    
+
 }
 
 .sector h5 {
@@ -39,11 +41,11 @@
         color: black;
     }
   }
-  
+
   .page-scroll{
     height:5000px;
   }
-  
+
 
   .lead {
     color: white;
@@ -71,5 +73,5 @@
     position: relative;
     height: 40px;
     margin-bottom: 10px;
-   
+
 }
