--- a/resources/sass/_general.scss
+++ b/resources/sass/_general.scss
@@ -5,3 +5,19 @@ body {
   width: 100%;
   font-family: "Montserrat", sans-serif;
 }
+
+#a{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+.team-4{
+  height: 200px;
+}
+
+div{
+  .tt-search-box{
+    margin: 0
+  }
+}
