--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10900,6 +10900,27 @@ body {
   height: 200px;
 }
 
+.barra_ricerca_tomtom {
+  position: relative;
+  bottom: 5px;
+}
+
+.barra_ricerca_tomtom .tt-search-box {
+  border-radius: 1000px;
+}
+
+.barra_ricerca_tomtom .tt-search-box-input-container {
+  border-radius: 1000px;
+}
+
+.barra_ricerca_tomtom .tt-search-box-result-list-container {
+  border-radius: 10px;
+}
+
+.barra_ricerca_tomtom svg {
+  fill: #B0C6F5;
+}
+
 header {
   width: 100%;
   background-color: #b0c6f5;
