--- a/resources/sass/_general.scss
+++ b/resources/sass/_general.scss
@@ -14,7 +14,9 @@ body {
 .team-4{
   height: 200px;
 }
-
+.row {
+    width: 100%;
+}
 .barra_ricerca_tomtom{
     position: relative;
     bottom:5px;
