--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10890,10 +10890,11 @@ body {
   font-family: "Montserrat", sans-serif;
 }
 
-#a {
+a.vue_card_link {
   position: absolute;
   width: 100%;
   height: 100%;
+  z-index: 1000;
 }
 
 .team-4 {
@@ -11791,5 +11792,9 @@ p + p {
   font-size: 36px;
   font-weight: 700;
   text-shadow: rgba(0, 0, 0, 0.5) 0 10px 10px;
+}
+
+.fathervue {
+  position: relative;
 }
 
