--- a/resources/sass/_general.scss
+++ b/resources/sass/_general.scss
@@ -5,10 +5,11 @@ body {
   width: 100%;
   font-family: "Montserrat", sans-serif;
 }
-#a{
+a.vue_card_link{
     position: absolute;
     width:100%;
     height:100%;
+    z-index: 1000;
 }
 
 .team-4{
