--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10930,6 +10930,18 @@ a.vue_card_link {
   fill: black;
 }
 
+.premium {
+  position: absolute;
+  right: 5px;
+  top: 5px;
+  width: 30px;
+  fill: #ffd740;
+}
+
+.premium-shadow {
+  box-shadow: 0px 0px 15px 0px #ffd740;
+}
+
 header {
   width: 100%;
   background-color: #b0c6f5;
