--- a/resources/sass/_general.scss
+++ b/resources/sass/_general.scss
@@ -56,3 +56,13 @@ a.vue_card_link{
 
 
 }
+
+#mostra, #nascondi{
+    cursor: pointer;
+    margin-left: 20px;
+    &:hover{
+        text-decoration: underline;
+    }
+
+
+}
