--- a/resources/sass/_general.scss
+++ b/resources/sass/_general.scss
@@ -4,7 +4,13 @@ body {
   padding: 0;
   width: 100%;
   font-family: "Montserrat", sans-serif;
+  background: #e6e8e8;
 }
+
+.content{
+  background: #e6e8e8;
+}
+
 a.vue_card_link{
     position: absolute;
     width:100%;
