--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10958,6 +10958,109 @@ a.vue_card_link {
   text-decoration: underline;
 }
 
+@supports (-webkit-appearance: none) or (-moz-appearance: none) {
+  #radioCss input[type=radio] {
+    --active: #275EFE;
+    --active-inner: #fff;
+    --focus: 2px rgba(39, 94, 254, .3);
+    --border: #BBC1E1;
+    --border-hover: #275EFE;
+    --background: #fff;
+    --disabled: #F6F8FF;
+    --disabled-inner: #E1E6F9;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    height: 21px;
+    outline: none;
+    display: inline-block;
+    vertical-align: top;
+    position: relative;
+    margin: 0;
+    cursor: pointer;
+    border: 1px solid var(--bc, var(--border));
+    background: var(--b, var(--background));
+    transition: background 0.3s, border-color 0.3s, box-shadow 0.2s;
+  }
+
+  #radioCss input[type=radio]:after {
+    content: "";
+    display: block;
+    left: 0;
+    top: 0;
+    position: absolute;
+    transition: transform var(--d-t, 0.3s) var(--d-t-e, ease), opacity var(--d-o, 0.2s);
+  }
+
+  #radioCss input[type=radio]:checked {
+    --b: var(--active);
+    --bc: var(--active);
+    --d-o: .3s;
+    --d-t: .6s;
+    --d-t-e: cubic-bezier(.2, .85, .32, 1.2);
+  }
+
+  #radioCss input[type=radio]:disabled {
+    --b: var(--disabled);
+    cursor: not-allowed;
+    opacity: 0.9;
+  }
+
+  #radioCss input[type=radio]:disabled:checked {
+    --b: var(--disabled-inner);
+    --bc: var(--border);
+  }
+
+  #radioCss input[type=radio]:disabled + label {
+    cursor: not-allowed;
+  }
+
+  #radioCss input[type=radio]:hover:not(:checked):not(:disabled) {
+    --bc: var(--border-hover);
+  }
+
+  #radioCss input[type=radio]:focus {
+    box-shadow: 0 0 0 var(--focus);
+  }
+
+  #radioCss input[type=radio]:not(.switch) {
+    width: 21px;
+  }
+
+  #radioCss input[type=radio]:not(.switch):after {
+    opacity: var(--o, 0);
+  }
+
+  #radioCss input[type=radio]:not(.switch):checked {
+    --o: 1;
+  }
+
+  #radioCss input[type=radio] + label {
+    font-size: 14px;
+    line-height: 21px;
+    display: inline-block;
+    vertical-align: top;
+    cursor: pointer;
+    margin-left: 4px;
+  }
+
+  #radioCss input[type=radio] {
+    border-radius: 50%;
+  }
+
+  #radioCss input[type=radio]:after {
+    width: 19px;
+    height: 19px;
+    border-radius: 50%;
+    background: var(--active-inner);
+    opacity: 0;
+    transform: scale(var(--s, 0.7));
+  }
+
+  #radioCss input[type=radio]:checked {
+    --s: .5;
+  }
+}
+
 header {
   width: 100%;
   background-color: #b0c6f5;
@@ -11404,76 +11507,266 @@ body {
   background: #e6e8e8;
 }
 
-.modal-login {
-  width: 350px;
-}
-
-.modal-login .modal-content {
-  padding: 20px;
-  border-radius: 1px;
-  border: none;
-}
-
-.modal-login .modal-header {
-  border-bottom: none;
-  position: relative;
+#loginCss {
+  display: flex;
   justify-content: center;
+  margin-top: 50px;
 }
 
-.modal-login h4 {
-  text-align: center;
-  font-size: 26px;
+#loginCss h4 {
+  font-size: 24px;
+  font-weight: 600;
+  color: #000;
+  opacity: 0.85;
 }
 
-.modal-login .form-group {
+#loginCss label {
+  font-size: 12.5px;
+  color: #000;
+  opacity: 0.8;
+  font-weight: 400;
+}
+
+#loginCss form {
+  padding: 40px 30px;
+  background: #fefefe;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding-bottom: 20px;
+  width: 300px;
+}
+
+#loginCss form h4 {
   margin-bottom: 20px;
+  color: rgba(0, 0, 0, 0.5);
 }
 
-.modal-login .form-control,
-.modal-login .btn {
-  min-height: 40px;
-  border-radius: 30px;
-  font-size: 15px;
-  transition: all 0.5s;
+#loginCss form h4 span {
+  color: black;
+  font-weight: 700;
 }
 
-.modal-login .form-control {
-  font-size: 13px;
+#loginCss form p {
+  line-height: 155%;
+  margin-bottom: 5px;
+  font-size: 14px;
+  color: #000;
+  opacity: 0.65;
+  font-weight: 400;
+  max-width: 200px;
+  margin-bottom: 40px;
 }
 
-.modal-login .form-control:focus {
-  border-color: #0c5ce3;
+#loginCss a.discrete {
+  color: rgba(0, 0, 0, 0.4);
+  font-size: 14px;
+  border-bottom: solid 1px rgba(0, 0, 0, 0);
+  padding-bottom: 4px;
+  margin-left: auto;
+  font-weight: 300;
+  transition: all 0.3s ease;
+  margin-top: 40px;
 }
 
-.modal-login .hint-text {
+#loginCss a.discrete:hover {
+  border-bottom: solid 1px rgba(0, 0, 0, 0.2);
+}
+
+#loginCss button {
+  -webkit-appearance: none;
+  width: auto;
+  min-width: 100px;
+  border-radius: 24px;
   text-align: center;
-  padding-top: 10px;
-}
-
-.modal-login .close {
-  position: absolute;
-  top: -5px;
-  right: -5px;
-}
-
-.modal-login .btn {
-  background: #0c5ce3;
+  padding: 15px 40px;
+  margin-top: 5px;
+  background-color: #b0c6f5;
+  color: #fff;
+  font-size: 14px;
+  margin-left: auto;
+  font-weight: 500;
+  box-shadow: 0px 2px 6px -1px rgba(0, 0, 0, 0.13);
   border: none;
-  line-height: normal;
+  transition: all 0.3s ease;
+  outline: 0;
 }
 
-.modal-login .btn:hover,
-.modal-login .btn :focus {
-  background: #0840a1;
+#loginCss button:hover {
+  transform: translateY(-3px);
+  box-shadow: 0 2px 6px -1px rgba(182, 157, 230, 0.65);
 }
 
-.modal-login .hint-text a {
-  color: #999;
+#loginCss button:hover:active {
+  transform: scale(0.99);
 }
 
-.trigger-btn {
-  display: inline-block;
-  margin: 100px auto;
+#loginCss input {
+  font-size: 16px;
+  padding: 20px 0px;
+  height: 56px;
+  border: none;
+  border-bottom: solid 1px rgba(0, 0, 0, 0.1);
+  background: #fff;
+  width: 280px;
+  box-sizing: border-box;
+  transition: all 0.3s linear;
+  color: #000;
+  font-weight: 400;
+  -webkit-appearance: none;
+}
+
+#loginCss input:focus {
+  border-bottom: solid 1px #b69de6;
+  outline: 0;
+  box-shadow: 0 2px 6px -8px rgba(182, 157, 230, 0.45);
+}
+
+#loginCss .floating-label {
+  position: relative;
+  margin-bottom: 10px;
+  width: 100%;
+}
+
+#loginCss .floating-label label {
+  position: absolute;
+  top: calc(50% - 7px);
+  left: 0;
+  opacity: 0;
+  transition: all 0.3s ease;
+  padding-left: 44px;
+}
+
+#loginCss .floating-label input {
+  width: calc(100% - 44px);
+  margin-left: auto;
+  display: flex;
+}
+
+#loginCss .floating-label .icon {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 56px;
+  width: 44px;
+  display: flex;
+}
+
+#loginCss .floating-label .icon svg {
+  height: 30px;
+  width: 30px;
+  margin: auto;
+  opacity: 0.15;
+  transition: all 0.3s ease;
+}
+
+#loginCss .floating-label .icon svg path {
+  transition: all 0.3s ease;
+}
+
+#loginCss .floating-label input:not(:placeholder-shown) {
+  padding: 28px 0px 12px 0px;
+}
+
+#loginCss .floating-label input:not(:placeholder-shown) + label {
+  transform: translateY(-10px);
+  opacity: 0.7;
+}
+
+#loginCss .floating-label input:valid:not(:placeholder-shown) + label + .icon svg {
+  opacity: 1;
+}
+
+#loginCss .floating-label input:valid:not(:placeholder-shown) + label + .icon svg path {
+  fill: #b69de6;
+}
+
+#loginCss .floating-label input:not(:valid):not(:focus) + label + .icon {
+  -webkit-animation-name: shake-shake;
+          animation-name: shake-shake;
+  -webkit-animation-duration: 0.3s;
+          animation-duration: 0.3s;
+}
+
+@-webkit-keyframes shake-shake {
+  0% {
+    transform: translateX(-3px);
+  }
+
+  20% {
+    transform: translateX(3px);
+  }
+
+  40% {
+    transform: translateX(-3px);
+  }
+
+  60% {
+    transform: translateX(3px);
+  }
+
+  80% {
+    transform: translateX(-3px);
+  }
+
+  100% {
+    transform: translateX(0px);
+  }
+}
+
+@keyframes shake-shake {
+  0% {
+    transform: translateX(-3px);
+  }
+
+  20% {
+    transform: translateX(3px);
+  }
+
+  40% {
+    transform: translateX(-3px);
+  }
+
+  60% {
+    transform: translateX(3px);
+  }
+
+  80% {
+    transform: translateX(-3px);
+  }
+
+  100% {
+    transform: translateX(0px);
+  }
+}
+
+#loginCss .session {
+  display: flex;
+  flex-direction: row;
+  width: auto;
+  height: auto;
+  margin: auto auto;
+  background: #ffffff;
+  border-radius: 4px;
+  box-shadow: 0px 2px 6px -1px rgba(0, 0, 0, 0.12);
+}
+
+#loginCss .left {
+  width: 220px;
+  height: auto;
+  min-height: 100%;
+  position: relative;
+  background-position: right;
+  background-image: url("https://img3.goodfon.com/wallpaper/nbig/6/74/interior-stylish-design-4398.jpg");
+  background-size: cover;
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
+}
+
+#loginCss .left svg {
+  height: 40px;
+  width: auto;
+  margin: 20px;
 }
 
 html,
