--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -8,7 +8,6 @@
 // Bootstrap
 
 
-
 @import 'general';
 
 @import 'header';
@@ -25,5 +24,6 @@
 // @import 'dettagli/_footer';
 
 @import 'dettagli/_card';
+@import 'dettagli/_error';
 @import '_filter';
 @import '_footer';
