--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11061,6 +11061,23 @@ a.vue_card_link {
   }
 }
 
+@media (max-width: 768px) {
+  .team-4 {
+    height: auto;
+  }
+
+  .section {
+    padding: 10px;
+  }
+}
+
+@media (min-width: 1100px) and (max-width: 1480px) {
+  #testingVue {
+    width: 1000px;
+    margin: 0 auto;
+  }
+}
+
 header {
   width: 100%;
   background-color: #b0c6f5;
@@ -11422,6 +11439,7 @@ nav#prova ul li a:hover {
 .grid {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
 }
 
 .sector h5 {
