--- a/resources/sass/_general.scss
+++ b/resources/sass/_general.scss
@@ -21,9 +21,9 @@ a.vue_card_link{
 .team-4{
   height: 200px;
 }
-.row {
-    width: 100%;
-}
+// .row {
+//     width: 100%;
+// }
 .barra_ricerca_tomtom{
     position: relative;
     bottom:5px;
@@ -169,17 +169,40 @@ a.vue_card_link{
 }
 
 
+@media (min-width: 1100px) and (max-width: 1480px) {
+    #testingVue {
+        width: 1000px;
+        margin: 0 auto;
+    }
+}
+
+
 @media (max-width: 768px) {
+    .barra_ricerca_tomtom {
+        svg {
+            fill: black;
+        }
+    }
+}
+
+
+@media (max-width: 767px) {
     .team-4{
-      height: auto;
+        height: auto;
     }
     .section {
         padding: 10px;
     }
 }
-@media (min-width: 1100px) and (max-width: 1480px) {
+
+@media (max-width: 425px) {
+    #smaller {
+        font-size: 1.8rem;
+    }
+    .barra_ricerca_tomtom {
+        width: 180px;
+    }
     #testingVue {
-        width: 1000px;
-        margin: 0 auto;
+        margin-right: -10px;
     }
 }
